# bobby

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HEALER_HISTORY.md  MEMORY.md  Makefile  README.md  bobby-specs-contractualisation-vigilance.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  railway.toml
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_roles_invites.py  002_roles_invitations_business_leads.py  003_add_inv_boond_ids.py  004_add_cv_transformer_tables.py  005_add_phone_to_users_invitations.py  006_add_names_to_invitations.py  007_add_quotation_templates_table.py  008_add_hr_feature_tables.py  008_add_published_opportunities.py  009_add_hr_feature_tables.py  010_add_row_level_security.py  011_add_turnoverit_skills_table.py  012_add_app_settings_table.py  013_add_turnoverit_skills_table.py  014_add_location_key_to_job_postings.py  015_fix_contract_types_enum.py  016_add_application_form_fields.py  017_add_cv_quality_fields.py  018_simplify_application_status.py  019_add_civility_and_boond_sync.py  020_reset_applications_for_boond_revalidation.py  020_reset_apps_for_revalidation.py  021_delete_all_job_postings.py  022_reset_hr_postings_and_applications.py  023_add_view_count_to_job_postings.py  024_reset_published_opportunities_and_cooptations.py  025_add_contractualisation_vigilance_tables.py  026_allow_duplicate_positioning_after_cancel.py  026_partial_uniq_pos.py  027_add_end_date_mission_title_to_contract_requests.py  028_add_consultant_address_to_contract_requests.py  028_add_consultant_and_address_fields.py  029_add_consultant_email_phone.py  029_add_document_extraction_fields.py  029_make_third_party_fields_nullable.py  030_add_contact_fields_to_third_parties.py  031_remove_siren_unique_constraint.py  032_add_document_extraction_fields.py  033_add_document_unavailability_fields.py  (+27 more)
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/middleware/: __init__.py  correlation.py  error_handler.py  rate_limiter.py  rls_context.py  security_headers.py
backend/app/api/routes/: __init__.py
backend/app/api/schemas/: __init__.py  admin.py  auth.py  cooptation.py  opportunity.py  published_opportunity.py  user.py
backend/app/application/: __init__.py
backend/app/application/cqrs/: __init__.py  base.py  handlers.py
backend/app/application/read_models/: __init__.py  cooptation.py  hr.py  opportunity.py  published_opportunity.py  user.py
backend/app/application/use_cases/: __init__.py  auth.py  cooptations.py  cv_transformer.py  invitations.py  job_applications.py  job_postings.py  opportunities.py  published_opportunities.py
backend/app/contract_management/api/: routes.py  schemas.py  webhook_routes.py
backend/app/contract_management/domain/: exceptions.py
backend/app/contract_management/infrastructure/: models.py
backend/app/domain/: __init__.py  exceptions.py  unit_of_work.py
backend/app/domain/entities/: __init__.py  business_lead.py  candidate.py  cooptation.py  cv_template.py  cv_transformation_log.py  invitation.py  job_application.py  job_posting.py  opportunity.py  published_opportunity.py  user.py
backend/app/domain/events/: __init__.py  base.py  cooptation_events.py  invitation_events.py  user_events.py
backend/app/domain/ports/: __init__.py  repositories.py  services.py
backend/app/domain/specifications/: __init__.py  base.py  cooptation_specifications.py  invitation_specifications.py  (+1 more)
backend/app/infrastructure/: __init__.py  logging.py  service_factory.py  unit_of_work.py
backend/app/quotation_generator/: __init__.py
backend/templates/: contrat_at.html
backend/tests/: __init__.py  conftest.py  factories.py
backend/tests/contract/: __init__.py  test_boond_contracts.py
backend/tests/unit/: test_gemini_anonymizer.py  test_gemini_client.py  test_gemini_matcher.py  test_service_factory.py
(+364 files in other folders)
